# dreamteam-T3001B

./: .gitignore  .gitmodules  README.md  requirements.txt
M1-Kinematics/: readme.md
M1-Kinematics/Lab2/: README.md
M1-Kinematics/Lab2/src/lite6_drawing/: package.xml  setup.cfg  setup.py
M1-Kinematics/Lab2/src/lite6_drawing/lite6_drawing/: drawer_script.py
M1-Kinematics/Lab2/src/xarm_ros2/xarm_moveit_config/rviz/: moveit.rviz
M1-Kinematics/Lab2/src/xarm_ros2/xarm_moveit_servo/rviz/: servo.rviz
M1-Kinematics/Lab2/src/xarm_ros2/xarm_perturbations/: setup.py
M4-RobotControl/LabControl4.2/: step_response_data.csv
M4-RobotControl/simulation_code/: CSVDataLogger.py  Dockerfile  METRICS.md  ReadMe.md  analyze_metrics.py  auto_tuning.py  configs_rubric.json  docker-compose.yml  generate_20_configs.py  metrics.json  play_gazebo_trajectory.py  plot_rubric_results.py  run_all_configs.py  run_all_rubric_experiments.py  run_complete_pipeline.sh  run_rubric_experiment.py  so101_mujoco_pid_utils.py
M4-RobotControl/simulation_code/model/: so101_perfect.urdf
M4-RobotControl/simulation_code/plots_rubrica/: dashboard.html
M4-RobotControl/simulation_code/rubric_results/: PD_1_LightDamp.html  PD_2_Critical.html  PD_3_OverDamp.html  PD_4_Stiff.html  PD_5_ExcessiveKd.html  PID_1_Conservative.html  PID_2_Balanced.html  PID_3_Aggressive.html  PID_4_KiDominant.html  PID_5_KdDominant.html  PI_1_LowKi.html  PI_2_MediumKi.html  PI_3_HighKi.html  PI_4_LowKp_HighKi.html  PI_5_Aggressive.html  P_1_VeryLow.html  P_2_Low.html  P_3_Medium.html  P_4_High.html  P_5_VeryHigh.html
(+77 files in other folders)
