<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite6_drawing</name>
  <version>0.0.0</version>
  <description>Paquete para el reto de dibujo en el aire con xArm Lite 6</description>
  <maintainer email="A01285873@tec.mx">dominguez</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_msgs</depend>
  <depend>xarm_msgs</depend>
  <depend>xarm_api</depend>
  <depend>pymoveit2</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>